@@ -1,3 +1,8 @@
+2001-08-06  Elliot Glaysher  <eglayshe@umich.edu>
+
+	* (Sorry about the prolonged abscence)
+	* Netcomics/Factory.pm (new): now imports all the 0.13.2 RLIs
+
 2001-07-27  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>
 
 	* INSTALL: Updated first section to explain in depth about
